--- a/src/main/resources/archetype-resources/README.adoc
+++ b/src/main/resources/archetype-resources/README.adoc
@@ -28,6 +28,8 @@ Run `mvn clean package` and deploy on any JavaEE 6 or greater application server
 
 IMPORTANT: If you are not running on `JBoss/Wildfly` you'll need to configure the datasource declared in https://github.com/adminfaces/admin-starter-persistence/blob/master/src/main/resources/META-INF/persistence.xml[persistence.xml^].
 
+TIP: To run on `Java EE 6` app server you'll need to downgrade OmniFaces to version `2.1`.
+
 You can also run via http://wildfly-swarm.io/[wildfly-swarm^] with command `mvn wildfly-swarm:run -Pswarm`.
 
 Or using docker:
